# geo-model

./: .gitignore  CLAUDE.md  pyproject.toml
.claude/rules/: architecture-invariants.md  data-safety.md  workflow.md
components/actor_management/: README.md
components/event_ingestion/: README.md
components/graph_propagation/: README.md
components/model_storage/: README.md
components/model_testing/: README.md
components/model_training/: README.md
components/prediction_heads/: README.md
components/structured_data_curation/: README.md
components/text_data_curation/: README.md
docs/: SESSION_TASKS.md  architecture-design.md
docs/components/: 01-training-data-curation.md  02-actor-registry.md  03-target-event-definition.md  04-model-architecture.md  05-training-pipeline.md  06-model-validation.md  README.md
docs/reviews/: design-gap-analysis.md  doc-update-plan.md
src/geo_model/: __init__.py  config.py  schemas.py
tests/: test_config.py  test_schemas.py
