[build-system]
requires = ["setuptools>=68.0", "setuptools-scm>=8.0"]
build-backend = "setuptools.build_meta"

[project]
name = "geo-model"
version = "0.1.0"
description = "Geopolitical event prediction via time-varying actor embeddings and survival curves"
requires-python = ">=3.11"
license = {text = "MIT"}

dependencies = [
    # Data processing (always needed)
    "pyarrow>=14.0",
    "pandas>=2.1",
    "numpy>=1.26",
    "polars>=0.20",
    "requests>=2.31",
    "scikit-learn>=1.3",

    # Config and schema validation
    "pydantic>=2.5",
    "pydantic-settings>=2.1",

    # Utilities
    "tqdm>=4.66",
    "loguru>=0.7",
]

[project.optional-dependencies]
ml = [
    # ML framework
    "torch>=2.1",
    "lightning>=2.1",
    # Text encoding
    "transformers>=4.36",
    "tokenizers>=0.15",
    # Tabular baseline (Phase 0)
    "lightgbm>=4.1",
    # Survival analysis
    "pycox>=0.2.3",
    # Sparse attention
    "entmax>=1.3",
    # Neural ODE (Phase 3)
    "torchdyn>=1.0",
]
data = [
    # Text filtering
    "datasketch>=1.6",
    "fasttext-wheel>=0.9.2",
    # Geoparsing
    "mordecai3>=3.0",
]
dev = [
    "pytest>=7.4",
    "pytest-cov>=4.1",
    "ruff>=0.1.9",
    "mypy>=1.8",
    "ipython>=8.18",
]
all = ["geo-model[ml,data,dev]"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "SIM", "TCH"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "slow: marks tests as slow (GPU/data-heavy)",
    "integration: marks tests requiring external data sources",
]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
